--- a/index.html
+++ b/index.html
@@ -1,2 +1,226 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css">
+  <style>
+    /* Custom styles for changing header and button colors */
+    .navbar-dark {
+      background-color: #135886 !important; /* Change this to the desired color for the header */
+    }
 
-<h1>Hello</h1>
+    .navbar-toggler-icon {
+      background-color: #ffffff; /* Change this to the desired color for the navbar toggler icon */
+    }
+
+    #refreshButton {
+      background-color: #0dcaf0 !important;
+      border-color: #0dcaf0;
+    }
+
+    #refreshButton:hover {
+      background-color: #0dcaf0; 
+    }
+  </style>
+  <title>Inferyx Release Notes</title>
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <!-- Add your logo image -->
+    <a class="navbar-brand" href="#">
+      <img src="https://www.inferyx.com/assets/images/home/inferyx_logo_v5.png" alt="Inferyx" height="30" class="d-inline-block align-text-top">
+    </a>
+    <a class="navbar-brand" href="#">Release Notes</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select Version
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <!-- Populate dropdown with versions from jsonFiles -->
+            <script>
+              const jsonFiles = ['INS_5.7.9.json', 'INS_5.6.9.json', 'INS_5.6.0.json'];
+              const dropdown = document.querySelector('.dropdown-menu');
+              jsonFiles.forEach(file => {
+                const version = file.replace('.json', '').replace('INS_', '');
+                const listItem = document.createElement('a');
+                listItem.classList.add('dropdown-item');
+                listItem.href = '#';
+                listItem.innerText = version;
+                listItem.addEventListener('click', () => {
+                  fetchAndProcessJSON(file);
+                  document.getElementById('navbarDropdown').innerText = `Select Version - ${version}`;
+                });
+                dropdown.appendChild(listItem);
+              });
+
+              // Set the last version as the default selected version
+              const defaultVersion = jsonFiles[jsonFiles.length - 1].replace('.json', '').replace('INS_', '');
+              document.getElementById('navbarDropdown').innerText = `Select Version - ${defaultVersion}`;
+            </script>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <button id="refreshButton" class="btn btn-primary mt-0">Refresh</button>
+  </div>
+</nav>
+<div class="container-fluid mt-3">
+  <!-- Container for tables -->
+  <div id="tablesContainer"></div>
+</div>
+
+<!-- Add a progress bar -->
+<div class="progress mt-2" id="progressBar" style="display: none;">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // Function to fetch and process JSON data for a specific file
+  function fetchAndProcessJSON(file) {
+    const version = file.replace('.json', '').replace('INS_', ''); // Extract version
+
+    // Show the progress bar
+    const progressBar = document.getElementById('progressBar');
+    progressBar.style.display = 'block';
+
+    fetch(file)
+      .then(response => response.json())
+      .then(jsonData => {
+        // Extract issues from JSON
+        const issues = jsonData.issues[0]; // Access the nested array
+
+        // Clear previous tables
+        const tableContainer = document.getElementById('tablesContainer');
+        tableContainer.innerHTML = '';
+
+        // Create a new table for the selected JSON file
+        const table = document.createElement('table');
+        table.className = 'table table-bordered mt-4';
+
+        // Add table header
+        const thead = table.createTHead();
+        const headerRow = thead.insertRow();
+        ['Issue ID', 'Issue Type', 'Fix Versions', 'Summary', 'Status Name', 'Release Date'].forEach(headerText => {
+          const th = document.createElement('th');
+          th.appendChild(document.createTextNode(headerText));
+          headerRow.appendChild(th);
+        });
+
+        // Add table body
+        const tbody = table.createTBody();
+        issues.forEach(issue => {
+          const row = tbody.insertRow();
+
+          // Helper function to create a popover content
+          const createPopoverContent = (title, content) => `
+            <div>
+              <strong>${title}:</strong>
+              <br>
+              ${content}
+            </div>
+          `;
+
+          // Helper function to create a cell with popover
+          const createCellWithPopover = (text, popoverTitle, popoverContent) => {
+    const cell = row.insertCell();
+    const truncatedText = text.length > 11 ? `${text.substring(0, 10)}...` : text;
+
+    if (text.length > 11) {
+        // Generate a unique ID for the popover
+        const popoverId = `popover-${Math.floor(Math.random() * 1000)}`;
+
+        // Set up the cell content with a fixed button on the right side
+        cell.innerHTML = `
+            <div class="d-flex justify-content-between align-items-center">
+                <span>${truncatedText}</span>
+                <button type="button" class="btn btn-sm btn-info" 
+                        data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" 
+                        data-bs-placement="right" data-bs-html="true" 
+                        data-bs-title="${popoverTitle}" data-bs-content="${popoverContent}" 
+                        data-bs-target="#${popoverId}">Show More</button>
+            </div>`;
+
+        // Set up the popover content with the close button
+        const popoverContentWithClose = `
+            <div style="max-height: 100px; overflow-y: auto;">${popoverContent}</div>
+            <button type="button" class="btn btn-sm btn-danger" 
+                    onclick="document.getElementById('${popoverId}').click();">Close</button>`;
+
+        // Initialize the popover
+        const popoverTrigger = new bootstrap.Popover(cell.querySelector('.btn-info'), {
+            container: 'body',
+            html: true,
+            content: popoverContentWithClose,
+        });
+
+        // Add an event listener to handle popover closing
+        cell.addEventListener('hidden.bs.popover', function () {
+            popoverTrigger.dispose(); // Dispose of the popover after it's hidden
+        });
+    } else {
+        cell.innerText = text;
+    }
+
+    return cell;
+};
+
+
+
+          createCellWithPopover(issue.id, 'Issue ID');
+          createCellWithPopover(issue.issuetype, 'Issue Type');
+          createCellWithPopover(issue.fixVersions ? issue.fixVersions : 'N/A', 'Fix Versions');
+          createCellWithPopover(issue.summary, 'Summary', createPopoverContent('Full Details', issue.summary));
+          createCellWithPopover(issue.status, 'Status Name');
+          createCellWithPopover(issue.releasedate, 'Release Date');
+        });
+
+        // Initialize Bootstrap popovers
+        const popovers = new bootstrap.Popover(document.body, {
+          selector: '[data-bs-toggle="popover"]',
+        });
+
+        // Add a title for the table
+        const title = document.createElement('h5');
+        title.className = 'mb-4';
+        title.appendChild(document.createTextNode(`Release Note - ${version}`));
+
+        // Append the title and table to the container
+        tableContainer.appendChild(title);
+        tableContainer.appendChild(table);
+
+        // Hide the progress bar
+        progressBar.style.display = 'none';
+      })
+      .catch(error => {
+        console.error(`Error fetching JSON data from ${file}:`, error);
+
+        // Hide the progress bar in case of an error
+        progressBar.style.display = 'none';
+      });
+  }
+
+  // Call fetchAndProcessJSON with the default version on page load
+  document.addEventListener('DOMContentLoaded', () => {
+    fetchAndProcessJSON(jsonFiles[jsonFiles.length - 1]);
+  });
+
+  // Add event listener for the Refresh button
+  const refreshButton = document.getElementById('refreshButton');
+  refreshButton.addEventListener('click', () => {
+    const selectedVersion = document.getElementById('navbarDropdown').innerText.replace('Select Version - ', '');
+    const selectedFile = `INS_${selectedVersion}.json`;
+    fetchAndProcessJSON(selectedFile);
+  });
+</script>
+</body>
+</html>
